--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "beauty1993",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "web.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,5 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1"
-  }
+  },
+  "keywords": [
+    "example",
+    "heroku"
+  ],
+  "author": "heywirdgirl",
+  "license": "MIT"
 }
