--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "beauty1993",
   "version": "1.0.0",
   "description": "",
-  "main": "web.js",
+  "main": "app.js",
   "scripts": {
+    "start":"node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "heywirdgirl",
-  "license": "MIT",
+  "license": "ISC",
   "dependencies": {
     "express": "^4.17.1"
   },
